Scheduler: Enqueue non-JS-timer tasks into the unthrottled task runner

We found throttling some of non-JS-timer tasks may break existing web pages,
so this CL tentatively makes them unthrottled.

In addition, this CL switches a task type for PostMessageTimer from
TaskType::Timer to TaskType::PostedMessage because the timer is used only for
performing postMessage() and actually not used as a JS timer.

BUG=684947

Review-Url: https://codereview.chromium.org/2669883003
Cr-Commit-Position: refs/heads/master@{#448173}

Former-commit-id: 04055dd2786e27cde8d210b68e7a726fab6d0c42